# digital-employee-demo

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  streamlit_app.py
docs/: wechat-setup.md
public/: custom.js
scripts/: init_chainlit_db.py
src/: __init__.py  config.py
src/agent/: graph.py  prompts.py
src/api/: calendar_feed.py  chat.py
src/llm/: chat.py  embedding.py
src/memory/: __init__.py  bookings.py  extractor.py  llm_extractor.py  preset.py  store.py
src/rag/: __init__.py  reranker.py
src/services/: __init__.py  agent_sync.py  store_sync.py
src/tools/: calendar.py  search.py
tests/: test_bookings_date_coercion.py  test_demo_scenarios.py  test_thought_tag_filter.py  test_tool_output_normalization.py
